# AI_NARRATOR

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.yaml  main.py  narrator.py  pyproject.toml  requirements.txt
agents/: extractor_agent.py  narrator_agent.py  npc_routines.py  orchestrator.py
config/: config.yaml
core/: llm_client.py  prompt_builder.py  retriever.py  state_manager.py  vault_writer.py
data/systems/: coc_7e.yaml  dnd_5e.yaml  generic.yaml  pathfinder_2e.yaml  vtm_v20.yaml
data/vault_template/Cofradias/: .gitkeep
data/vault_template/Frentes/: .gitkeep
data/vault_template/Locaciones/: .gitkeep
data/vault_template/Notas/: .gitkeep
data/vault_template/Recursos/: .gitkeep
data/vault_template/Sesiones/: .gitkeep
docs/: diseño_narrativo.md  skill_experto.md  skill_narrador.md  tecnicas_de_narracion.md
docs/prompts/: Prompt_Generador_Cronica.md
narrator/: __init__.py  app.py  logger.py
narrator/agents/: __init__.py  extractor_agent.py  narrator_agent.py  npc_routines.py  orchestrator.py  world_agent.py
narrator/core/: __init__.py  embedder.py  llm_client.py  prompt_builder.py  retriever.py  session_manager.py  state_manager.py  vault_writer.py
narrator/core/theory_engine/: __init__.py  investigation_engine.py  master_move_engine.py  pacing_tone_agent.py  universal_master_moves.yaml  universal_narrative_tools.yaml  universal_world_tools.yaml  (+1 more)
systems/: dnd_5e.yaml  pathfinder_2e.yaml
vault_template/Misterios/: .gitkeep
vault_template/NPCs/: .gitkeep
vault_template/Sistemas/: .gitkeep
