[project]
name = "ai-narrator"
version = "0.2.0"
description = "Motor de rol con agentes especializados y LLMs locales via Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "dearpygui>=1.11.0",
    "requests>=2.31.0",
    "PyMuPDF>=1.24.0",
    "pyyaml>=6.0.1",
    "python-frontmatter>=1.1.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
semantic = [
    "numpy>=1.26.0",   # cosine similarity
]
dev = [
    "pytest>=8.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
ai-narrator = "narrator.app:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
